; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_s5h1420.c_s5h1420_read_signal_strength.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_s5h1420.c_s5h1420_read_signal_strength.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.s5h1420_state* }
%struct.s5h1420_state = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_frontend*, i64*)* @s5h1420_read_signal_strength to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @s5h1420_read_signal_strength(%struct.dvb_frontend* %0, i64* %1) #0 {
  %3 = alloca %struct.dvb_frontend*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca %struct.s5h1420_state*, align 8
  %6 = alloca i32, align 4
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %3, align 8
  store i64* %1, i64** %4, align 8
  %7 = load %struct.dvb_frontend*, %struct.dvb_frontend** %3, align 8
  %8 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %7, i32 0, i32 0
  %9 = load %struct.s5h1420_state*, %struct.s5h1420_state** %8, align 8
  store %struct.s5h1420_state* %9, %struct.s5h1420_state** %5, align 8
  %10 = load %struct.s5h1420_state*, %struct.s5h1420_state** %5, align 8
  %11 = call i32 @s5h1420_readreg(%struct.s5h1420_state* %10, i32 21)
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %6, align 4
  %13 = shl i32 %12, 8
  %14 = load i32, i32* %6, align 4
  %15 = or i32 %13, %14
  %16 = sext i32 %15 to i64
  %17 = load i64*, i64** %4, align 8
  store i64 %16, i64* %17, align 8
  ret i32 0
}

declare dso_local i32 @s5h1420_readreg(%struct.s5h1420_state*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
